replacing redundant ids
replacing redundant ids for dropdownMenu1 and title

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ Footnote
       <div class="form-group">
           <label for="inputPassword3" class="col-sm-2 control-label">Type</label>
           <div class="col-sm-10 dropdown" id="menu-supporting-material">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" value="testing">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" value="testing">
               Select Type of Supporting Material
               <span class="caret"></span>
             </button>
@@ -362,7 +362,7 @@ Footnote
           <div class="input-group-addon">Type:</div>
           <div class="input-group">
               <div class="dropdown" id="menu-supporting-material">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" value="testing">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" value="testing">
                   Select Type of Supporting Material
                   <span class="caret"></span>
                 </button>
@@ -379,7 +379,7 @@ Footnote
       <div class="form-group">
         <div class="input-group">
           <div class="input-group-addon">Title:</div>
-          <input id="title" type="text" class="form-control" placeholder="enter title">
+          <input id="title1" type="text" class="form-control" placeholder="enter title">
         </div>
       </div><!--form-group-->
 
@@ -388,7 +388,7 @@ Footnote
         <div class="input-group">
           <div class="input-group-addon">File:</div>
             <div class="dropdown" id="select-file-type">
-              <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+              <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu4" data-toggle="dropdown">
                 Select File Type
                 <span class="caret"></span>
               </button>
@@ -522,7 +522,7 @@ Footnote
       </div>
       <div class="modal-body">
         <div class="dropdown" id="menu-supporting-material">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" value="testing">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu5" data-toggle="dropdown" value="testing">
             Select an item to open
             <span class="caret"></span>
           </button>
@@ -557,7 +557,7 @@ Footnote
       </div>
       <div class="modal-body">
         <label>Enter a new document name:</label>
-        <input id="title" type="text" class="form-control" placeholder="copy of Untitled Item">
+        <input id="title2" type="text" class="form-control" placeholder="copy of Untitled Item">
         <br />
         <button type="button" class="btn btn-primary" id="save">OK</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
