--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   
   <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
-  <script src="chosen_v1.2.0/chosen.jquery.js"></script>
-  <link rel="stylesheet" href="chosen_v1.2.0/chosen.css" />
+<!--   <script src="chosen_v1.2.0/chosen.jquery.js"></script> -->
+<!--   <link rel="stylesheet" href="chosen_v1.2.0/chosen.css" /> -->
   <link rel="stylesheet" href="build.css" />
   
 
